--- a/Frontend_Engineering/JavaScript/Week2/DOM/index.html
+++ b/Frontend_Engineering/JavaScript/Week2/DOM/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <title>DOM</title>
     <!-- <script src="index.js" defer></script> -->
-    <!-- <script src="navigating.js" defer></script> -->
+    <script src="navigating.js" defer></script>
     <!-- <script src="searching.js" defer></script> -->
     <!-- <script src="modification.js" defer></script> -->
-    <script src="jsstyles.js" defer></script>
+    <!-- <script src="jsstyles.js" defer></script> -->
 
 </head>
 <style>
@@ -24,7 +24,7 @@
     <h1 id="h1_text">A simple table</h1>
     <table class="my_table">
         <tbody>
-            <tr style="color: aqua;">
+            <tr>
                 <th>Name</th>
                 <th>Age</th>
             </tr>
@@ -44,21 +44,21 @@
     </table>
     <table class="my_table">
         <tbody>
-            <tr style="color: aqua;">
+            <tr>
                 <th>Name</th>
                 <th>Age</th>
             </tr>
             <tr>
-                <td>John</td>
-                <td>25</td>
+                <td>Ade</td>
+                <td>20</td>
             </tr>
             <tr>
-                <td>Jane</td>
-                <td class="r_table_data">24</td>
+                <td>Amina</td>
+                <td class="r_table_data">23</td>
             </tr>
             <tr>
-                <td>Jack</td>
-                <td>23</td>
+                <td>Austin</td>
+                <td>21</td>
             </tr>
         </tbody>
     </table>
